<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sign_edit_text">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_email"
            android:inputType="textEmailAddress"
            android:text="ting4602@gmail.com" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sign_edit_text">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_password"
            android:inputType="textPassword"
            android:text="a6566190" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_sign_button"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/sign_singin"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_sign_button"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/sign_singup"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/button_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sign_button"
        android:background="@null"
        android:text="@string/sign_go_to_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:src="@drawable/google_plus" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:src="@drawable/facebook" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:src="@drawable/twitter" />

    </LinearLayout>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="@dimen/width_progressbar"
        android:layout_height="@dimen/width_progressbar"
        android:layout_gravity="center|bottom"
        android:indeterminate="true"
        android:visibility="gone"
        app:mpb_progressStyle="circular" />

</LinearLayout>
