<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/width_logo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sing_up_image"
                    android:src="@drawable/default_image"
                    android:layout_width="@dimen/width_profile_image"
                    android:layout_height="@dimen/height_profile_image"
                    android:layout_marginLeft="@dimen/margin_profile_image_left"
                    android:layout_marginTop="@dimen/margin_profile_image_top"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_sign_edit_text">

                        <EditText
                            android:id="@+id/edit_text_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_name"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/button_sign_up_upload_image"
                        android:layout_width="@dimen/width_profile_upload_button"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:text="@string/sign_upload_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_edit_text">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_edit_text">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_group_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_radio_group">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Man" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_woman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Woman" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_edit_text">

                <EditText
                    android:id="@+id/edit_text_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_introduction"
                    android:lines="3"
                    android:minLines="2"
                    android:maxLines="4"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_button"
                android:background="@color/colorAccent"
                android:text="@string/sign_register"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_button"
                android:background="@null"
                android:text="@string/sign_go_to_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sign_button"
                android:background="@null"
                android:text="@string/sign_go_to_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progressbar"
                style="@style/Widget.MaterialProgressBar.ProgressBar"
                android:layout_width="@dimen/width_progressbar"
                android:layout_height="@dimen/height_progressbar"
                android:layout_gravity="center|bottom"
                android:indeterminate="true"
                android:visibility="gone"
                app:mpb_progressStyle="circular" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>